--- a/spark/example.conf
+++ b/spark/example.conf
@@ -3,7 +3,7 @@
 master_uri=local[1]
 
 SPARK_HOME=/usr/lib/spark
-deployment_path=target/scala-2.9.3/sparkmicropathing_2.9.3-1.0.jar
+deployment_path=lib_managed/jars/com.oculusinfo/binning-utilities/binning-utilities-0.1.1.jar:lib_managed/jars/com.oculusinfo/math-utilities/math-utilities-0.1.1.jar:lib_managed/jars/com.oculusinfo/tile-generation/tile-generation-0.1.1.jar:lib_managed/jars/com.oculusinfo/geometric-utilities/geometric-utilities-0.1.1.jar:lib_managed/jars/joda-time/joda-time/joda-time-2.1.jar:lib_managed/jars/org.joda/joda-convert/joda-convert-1.2.jar:target/scala-2.9.3/sparkmicropathing_2.9.3-1.0.jar
 //default_parallelism=92
 job.name=SparkMicroPathing
 
@@ -17,13 +17,20 @@ col.id=0
 col.datetime=2
 col.date=-1
 col.time=-1
-col.lon=4
-col.lat=3
+col.lon=5
+col.lat=4
 col.seperator=\t 
 
 
 mercator.level=5
 avro.data.store=local
+
+//avro.data.store=hbase
+//avro.output.name=spark_micro_path_example_name
+//avro.output.desc="example run of spark micro path with mmsi data"
+//hbase.zookeeper.quorum=
+//hbase.zookeeper.port=2181
+//hbase.master=
 
 // MICROPATH CONFIG SETTINGS
 
